@@ -1,3 +1,11 @@
+2006-05-28  Jon A. Cruz  <jon@joncruz.org>
+
+	* src/dialogs/layers-panel.h, src/dialogs/layers-panel.cpp:
+
+	  Changed clicking on visibility and locked toggles to not switch
+	  selected layer.
+	  Fixes bug #1495856.
+
 2006-05-28  Michael Wybrow  <mjwybrow@users.sourceforge.net>
 
 	* src/sp-conn-end-pair.cpp: Detach connectors from empty groups
